[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme1.tres" type="Theme" id=1]
[ext_resource path="res://Scenes&scripts/PauseMenu.gd" type="Script" id=2]

[node name="PauseMenu" type="MarginContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 640.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3

[node name="Buttons" type="MarginContainer" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 1024.0
margin_bottom = 508.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Buttons"]
margin_right = 1024.0
margin_bottom = 376.0

[node name="Button" type="Button" parent="VBoxContainer/Buttons/VBoxContainer"]
margin_right = 400.0
margin_bottom = 91.0
rect_min_size = Vector2( 400, 0 )
focus_neighbour_top = NodePath("../Button4")
focus_neighbour_bottom = NodePath("../Button2")
size_flags_horizontal = 2
size_flags_vertical = 3
text = "Continue"

[node name="Button2" type="Button" parent="VBoxContainer/Buttons/VBoxContainer"]
margin_top = 95.0
margin_right = 360.0
margin_bottom = 186.0
rect_min_size = Vector2( 360, 0 )
focus_neighbour_top = NodePath("../Button")
focus_neighbour_bottom = NodePath("../Button3")
size_flags_horizontal = 2
size_flags_vertical = 3
text = "Save game & Main Menu"

[node name="Button3" type="Button" parent="VBoxContainer/Buttons/VBoxContainer"]
margin_top = 190.0
margin_right = 320.0
margin_bottom = 281.0
rect_min_size = Vector2( 320, 0 )
focus_neighbour_top = NodePath("../Button2")
focus_neighbour_bottom = NodePath("../Button4")
size_flags_horizontal = 2
size_flags_vertical = 3
text = "Instructions"

[node name="Button4" type="Button" parent="VBoxContainer/Buttons/VBoxContainer"]
margin_top = 285.0
margin_right = 280.0
margin_bottom = 376.0
rect_min_size = Vector2( 280, 0 )
focus_neighbour_top = NodePath("../Button3")
focus_neighbour_bottom = NodePath("../Button")
size_flags_horizontal = 2
size_flags_vertical = 3
text = "Quit"

[node name="Speissss" type="MarginContainer" parent="VBoxContainer"]
margin_top = 512.0
margin_right = 1024.0
margin_bottom = 640.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3

[connection signal="pressed" from="VBoxContainer/Buttons/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/VBoxContainer/Button4" to="." method="_on_Button4_pressed"]
